Fix #111595: Missing metadata info when blending image.

Copy metadate from original image to blended result